Hide twitter API Keys

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -5229,10 +5229,10 @@
     "\n",
     "# Query Twitter API for each tweet in the Twitter archive and save JSON in a text file\n",
     "# These are hidden to comply with Twitter's API terms and conditions\n",
-    "consumer_key = 'T2xPTboBYZSssbTwOedFKf4QA'\n",
-    "consumer_secret = '3QLMfMuU8LVUhHB4AGskknKz8nKnhP1i7wAhcfh9RSptUDhWSn'\n",
-    "access_token = '558744257-fpiRx6gGgDQDaQO9atUy4HVfrmXTYzqR2j00vGbx'\n",
-    "access_secret = 'Ahk1HrknXZZMxlpW42xb68dTlOGRD6ZNlhocyE0mc9FPD'\n",
+    "consumer_key = 'HIDDEN'\n",
+    "consumer_secret = 'HIDDEN'\n",
+    "access_token = 'HIDDEN'\n",
+    "access_secret = 'HIDDEN'\n",
     "\n",
     "auth = OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_secret)\n",
